examples/eks-cluster-with-new-vpc-stc-eks-atlas-test-1/argocd/apps/redirecthttps.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: emojivoto
spec:
  redirectScheme:
    scheme: https
    permanent: true
