examples/eks-cluster-with-new-vpc-stc-eks-atlas-test-1/argocd/apps/emojivoto-ingress-traefik.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: l5d-header-middleware
  namespace: emojivoto
spec:
  headers:
    customRequestHeaders:
      l5d-dst-override: "web-svc.emojivoto.svc.cluster.local:80"
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  creationTimestamp: null
  name: emojivoto-web-ingress-route
  namespace: emojivoto
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`emojivoto-atlas-test-1.hostk8s4.com`) && PathPrefix(`/`)
    priority: 0
    middlewares:
    - name: l5d-header-middleware
    - name: https-redirect
    services:
    - kind: Service
      name: web-svc
      port: 80
  tls:
    secretName: emojivoto-cert # same content as in traefik-cert
    domains:
      - main: emojivoto-atlas-test-1.hostk8s4.com
